--- a/reset.css
+++ b/reset.css
@@ -51,6 +51,9 @@ table {
     box-sizing: border-box;
 }
 .container {
+	display: flex;
+	gap:10px ;
+	justify-content: center;
 	width: 960px;
     margin:0 auto;
 }
